--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "env-cmd -f ./config/dev.env nodemon src/server/server.js",
     "start": "node src/server/server.js",
     "build": "webpack --config webpack.config.js",
-    "build-dev": "webpack-dev-server  --config webpack.dev.config.js --open"
+    "build-dev": "webpack  --config webpack.dev.config.js"
   },
   "author": "",
   "license": "ISC",
